# ai_detector

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  ai_emails.csv  cacert2.pem  docker-compose.yaml  local.env  test_server.crt  test_server.key  test_server2.key  todo.txt
src/: connections.rs  handler.rs  homepage.rs  lib.rs  main.rs  req.rs  server.rs  shutdown.rs
