[package]
name = "ai_detector"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.49.0", features = ["full"] }

polars = { version = "0.52", features = ["parquet", "lazy", "timezones"] }
anyhow = "1.0"
mail-parser = "0.11"
flate2 = { version = "1.1", features = ["any_zlib"] }
csv = "1.4.0"
plotters = "0.3"
