[package]
name = "ai_detector"
version = "0.1.0"
edition = "2024"

[dependencies]

tokio = { version = "1.49.0", features = ["full"] }
tokio-rustls = { version = "0.26.4", features = ["aws-lc-rs"] }

h2 = "0.4"
http = "1.4"
hypertext = "0.12.1"
polars = { version = "0.52", features = ["parquet", "lazy", "timezones"] }
anyhow = "1.0"
mail-parser = "0.11"
flate2 = { version = "1.1", features = ["any_zlib"] }
csv = "1.4.0"
plotters = "0.3"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
bytes = "1.11"
urlencoding = "2.1.3"
